# signaldeck-plugin-ecowitt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  logging_config.json  pyproject.toml
config/: ecowitt.json  ecowitt_ohne_docker.json  ecowitt_processor.json  ecowitt_processor_cellar.json  ecowitt_processor_garten.json  group_ecowitt.json  group_ecowitt_cellar.json  group_ecowitt_eg.json  group_ecowitt_og.json  mqtt.json
plugins/signaldeck_plugin_ecowitt/: displaydata.py  plugin.py  processor.py
plugins/signaldeck_plugin_ecowitt/locales/: de.json  en.json
plugins/signaldeck_plugin_ecowitt/templates/ecowitt/: WN31.html  WS90.html  overview.html
